--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,7 +6,62 @@
 	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#000000" />
-	<meta name="description" content="" />
+	<meta name="description" content="
+		Сайт объявлений по улусам Республики Саха (Якутия). 
+		Выставка объявлений авто, недвижимости, для дома, еды, услуг и прочее.
+	" />
+	<meta name="keywords" content="
+		uluus.ru,
+		ulus.ru,
+		улуус.ру,
+		улус.ру,
+		Доска Якутии,
+		Объявления Якутии,
+		Авто Якутии,
+		Недвижимость Якутии,
+		Запчасти Якутии,
+		Доска Якт,
+		Объявления Якт,
+		Продаю Якт,
+		Районы Якутии,
+		Райцентры якутии,
+		Абыйский,
+		Алданский,
+		Аллаиховский,
+		Амгинский,
+		Анабарский,
+		Булунский,
+		Верхневилюйский,
+		Верхнеколымский,
+		Верхоянский,
+		Вилюйский,
+		Горный,
+		Жатай,
+		Жиганский,
+		Кобяйский,
+		Ленский,
+		Мегино-Кангаласский,
+		Мирнинский,
+		Момский,
+		Намский,
+		Нерюнгринский,
+		Нижнеколымский,
+		Нюрбинский,
+		Оймяконский,
+		Олекминский,
+		Оленекский,
+		Среднеколымский,
+		Сунтарский,
+		Таттинский,
+		Томпонский,
+		Усть-Алданский,
+		Усть-Майский,
+		Усть-Янский,
+		Хангаласский,
+		Чурапчинский,
+		Эвено-Бытантайский,
+		Якутск
+	">
 	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 	<!--
       manifest.json provides metadata used when your web app is installed on a
