--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
     <meta
       name="description"
       content="Доска бесплатных объявлений Якутска и улусов Республики Саха (Якутия). Все объявления Республики Саха (Якутия) в одном месте. Вы можете подать объявление по РС(Я) совершенно бесплатно!"
+	  data-react-helmet="true"
     />
     <meta
       name="keywords"
